# ambilight

./: .gitignore  CMakeLists.txt  ambilight.h  app_settings.h  arduino.ino  arduino_saved.ino.ino  capturer.h  capturer_config.h  color.h  config.ini  constants.h  displayer.h  main.cpp  sender.h  serial_writer.h  tray_app.h  xdisplay.h
